--- a/src/App.css
+++ b/src/App.css
@@ -1,20 +1,3 @@
-Skip to content
-Search or jump to…
-
-Pull requests
-Issues
-Marketplace
-Explore
- 
-@TheHelmsman 
-1
-13csr/OpenStreetMap-ReactJS
- Code Issues 0 Pull requests 0 Projects 0 Wiki Security Insights
-OpenStreetMap-ReactJS/openstreetmap-reactjs/src/App.css
-@csr csr added project files
-decb933 on 9 Sep 2018
-43 lines (35 sloc)  501 Bytes
-  
 .App {
   text-align: center;
 }
@@ -23,15 +6,12 @@ decb933 on 9 Sep 2018
   height: 100%;
   width: 100%;
   position: absolute;
+  z-index: 100;
 }
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
   height: 80px;
-}
-
-.navbar {
-  position: absolute;
 }
 
 .App-header {
@@ -56,4 +36,37 @@ decb933 on 9 Sep 2018
   to {
     transform: rotate(360deg);
   }
+}
+
+.Ava {
+  left:50%;
+  margin-left: -20px;
+  top: 20px;
+  display: block;
+  width: 40px;
+  height: 40px;
+}
+
+.TextInput {
+  height: 60px;
+  top: 10px;
+  border: none;
+  background: rgba(210, 210, 210, 0.8);
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  color: rgba(0, 0, 0, 0.8);
+  font-weight: 300;
+  width:100%;
+  padding-left:10px;
+  padding-right:10px;
+}
+
+.LoginFormLink {
+  width:100%;
+  text-align: left;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+  display: block;
 }
